Finalização da Epic Games

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-test
+<h1>Oh hello, the index is still under construction :)</h1>
+
+<h2>Current projects</h2>
+
+<a href="https://ivinrodrigues.github.io/clonesForStudents/netflix/">Netflix</a>
+<a href="https://ivinrodrigues.github.io/clonesForStudents/epic/">Epic Games</a>
